Release 0.3.12 - ??? 200?

REQUIRED PACKAGES

- QuantLib version 0.3.12
- ObjectHandler version 0.1.3

FUNCTIONALITY

- 3 new functions / 73 in total
- backward & forward flat interpolators (Aurelien Chanudet)
- Documentation revised and extended


Release 0.3.11 - October 2005

REQUIRED PACKAGES

- QuantLib version 0.3.11
- ObjectHandler version 0.1.2

FUNCTIONALITY

- 13 new functions / 70 in total
- Coupon Vectors, Interpolation, Schedules, Swaps (Aurelien Chanudet)
- Polymorphic behavior in exported QuantLibAddin functions (Plamen Neykov)
- support for direct calls to underlying QuantLib functions (Plamen Neykov)
- optional function parameters (Plamen Neykov), default values
- source code generation refactored for improved OO/maintainability


Release 0.3.10 - July 2005

OVERVIEW

Initial release consisting of prototype framework:
- core library of supported classes
- function metadata
- script to autogenerate source for target platforms
- sample client applications and spreadsheets

REQUIRED PACKAGES

- Boost version 1.31.0 or later
- QuantLib version 0.3.10
- ObjectHandler version 0.1.1

FUNCTIONALITY

- bonds & zero curves (Walter Penschke)
- caps & floors, term structures (Aurelien Chanudet)
- swaps, xibor, enumeration type factory (Plamen Neykov)
- options, volatilities, processes
- diagnostic and utility functions

PLATFORMS

- Microsoft Excel
- OpenOffice.org Calc
- C/C++
- Guile (Aurelien Chanudet)
