@@ -161,8 +161,7 @@ class AddinExcel(addin.Addin):
             paramStr += 'C'
         for param in function.parameters:
             paramStr += self.ruleXlRegisterParam.apply(param)
-        if function.isConstructor:
-            paramStr += '#'
+        paramStr += '#'
         return paramStr
 
     def generateFuncRegister(self, fileHeader, function):
