@@ -1,9 +1,12 @@
 DLLEXPORT %s%s(%s) {
     try {
+        SET_SESSION_ID
+
 %s        boost::shared_ptr< QuantLibAddin::%s > objectPointer =
             OH_GET_OBJECT(QuantLibAddin::%s, handle);
         if (!objectPointer)
             QL_FAIL("Error retrieving object " + std::string(handle));
+
         %s returnValue;
         returnValue = %s(%s);
 %s
